@@ -1818,7 +1818,7 @@ namespace OpenBabel
     vector< OBAtom* > delatoms;
     set< int > atomIndices;
     for( i = cfl.begin(); i != cfl.end(); ++i ) {
-      if( i->size() < threshold ) {
+      if( i->size() < threshold || (threshold == 0 && i != max) ) {
         for (j = (*i).begin();j != (*i).end();++j) {
           if( atomIndices.find( *j ) == atomIndices.end() ) {
             delatoms.push_back(GetAtom(*j));
