@@ -1,3 +1,9 @@
+2010-05-07  Noel O'Boyle
+
+	* src/mol.cpp, include/openbabel/mol.h: Change OBMol::StripSalts() to
+	remove all but the largest fragment if threshold is 0. Updated the
+	docs.
+
 2010-05-06  Noel O'Boyle
 
 	* scripts/CMakeLists.txt: Place the SWIG-generated files in the
